# life-documentary

./: .gitignore  .plan.md  CLAUDE.md  README.md  pyproject.toml  run_web.sh
data/birth_templates/: default.yaml
data/laws/: 01_criminal.yaml  02_curfew_and_decorum.yaml  03_commerce.yaml  04_combat.yaml  05_household.yaml  06_official_discipline.yaml  07_gambling.yaml  08_poison.yaml  09_trespass.yaml  10_witness_tampering.yaml
docs/: 00-vision.md  01-principles.md  02-architecture.md  03-tech-stack.md  04-roadmap.md
docs/decisions/: 0001-code-as-tools-ai-as-brain.md  0002-laws-as-data.md  0003-tdd-workflow.md  0004-tech-stack-python.md  0005-web-ui-layer.md  0006-phase2-content-depth.md  0007-phase3-combat-and-checks.md  0008-phase4-rendering-layer.md  0009-phase5b-economy-services.md  0010-phase5bc-story-progress.md  0011-phase5c-content-enrichment.md  0011-phase5c-content-supplement.md  0012-phase6-frontend-story-panel.md  0012-phase6-story-panel.md  0013-phase6-step2-advisor-system.md  0014-phase6-step3-observation-system.md  0015-phase6-step4-party-system.md  0016-phase6-step5-skill-growth.md  0017-phase6-multi-ending.md  0018-phase6-shareable-save.md  0019-phase7-timeline-panel.md  0020-phase7-info-hierarchy.md  0021-phase7-action-suggestions.md  0022-phase7-review-replay.md  0023-phase7-review-text-export.md  0024-phase8-render-signature-cache.md  0025-phase8-collapsible-side-panels.md  0026-phase8-situation-summary.md  0027-phase8-side-panel-nav.md  0028-phase8-side-nav-badges.md  0029-phase8-priority-panel.md  (+93 more)
scripts/: advance.sh
tests/: test_tfidf.py
(+181 files in other folders)
