[project]
name = "mingrpg"
version = "0.0.1"
description = "AI-native RPG set in Ming Dynasty China"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39,<1.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "jieba>=0.42",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-playwright>=0.5",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mingrpg = "mingrpg.cli:main"
mingrpg-web = "mingrpg.web.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
